# research

./: .gitignore  README.md  pyproject.toml
rnd/agent/: memory.py
rnd/audioo/: audio_gen.py  mic.py  speach_gen.py  speach_to_text.py  stt_whisper.py
rnd/images/: control_net.py  image_gen.py
rnd/video/: video_gen.py  webcam.py
